--- a/templates/foreign/univ_list.html
+++ b/templates/foreign/univ_list.html
@@ -1,31 +1,45 @@
 {%extends "base.html"%}
 {%block content%}
-
-<div class="lbody d-flex flex-column">
-    <div class="container">
-    <div class="lbar d-flex align-items-center">
-        <div class="lforeign_list d-flex justify-content-around text-center ">
-        {% for key, val in univ_dict.items %}
-        <a href="#{{ key }}" class="lbar_alpha list-unactive" onclick="clickAlpha('{{key}}')">{{ key }}</a>
-        {% endfor %}
+<div class="d-flex justify-content-end">
+    <div class="lbody d-flex flex-column">
+        <div class="container">
+        <div class="lbar d-flex align-items-center">
+            <div class="lforeign_list d-flex justify-content-around text-center ">
+            {% for key, val in univ_dict.items %}
+            <a href="#{{ key }}" class="lbar_alpha list-unactive" onclick="clickAlpha('{{key}}')">{{ key }}</a>
+            {% endfor %}
+            </div>
+            <button class="light-button lgbtn-gray" onclick="location.href='{% url "foreign:univ_search" %}'">학교추가</button>
         </div>
-        <button class="light-button lgbtn-gray" onclick="location.href='{% url "foreign:univ_search" %}'">학교추가</button>
+        <div>
+            {% for key, val in univ_dict.items %}
+            <div class="lgroup">
+                    <div id="{{ key }}" class="lalpha">{{ key }}</div>
+                    <div class="lforeign_name ">
+                    {% for univ in val %}
+                        <a href="{% url "foreign:wiki" univ.pk%}">{{univ.away_name}}</a>
+                    {% endfor %}
+                    </div>
+                <br>
+            </div>
+            {% endfor %}
+
+        </div>
+    </div>
     </div>
     <div>
-        {% for key, val in univ_dict.items %}
-        <div class="lgroup">
-                <div id="{{ key }}" class="lalpha">{{ key }}</div>
-                <div class="lforeign_name ">
-                {% for univ in val %}
-                    <a href="{% url "foreign:wiki" univ.pk%}">{{univ.away_name}}</a>
-                {% endfor %}
-                </div>
-            <br>
-        </div>
-        {% endfor %}
-
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+        crossorigin="anonymous"></script>
+    <ins class="adsbygoogle"
+        style="display:block; text-align:center;"
+        data-ad-layout="in-article"
+        data-ad-format="fluid"
+        data-ad-client="ca-pub-2153488758273914"
+        data-ad-slot="4996117401"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     </div>
-</div>
 </div>
 <script>
 function list(startAlpha){
