Feat: 광고 위치 임시테스트3_ 국내 base.html

--- a/templates/country/country_univ.html
+++ b/templates/country/country_univ.html
@@ -1,35 +1,46 @@
 {%extends "country/country_base.html"%} 
 
 {%block contents%}
-<div class="container2 category-detail">
-  <div class="d-flex justify-content-between align-items-end">
-    <div class="d-flex align-items-end">
-      <h3>{{country.country_name}}</h3>
+<div class="d-flex justify-content-end">
+  <div class="container2 category-detail">
+    <div class="d-flex justify-content-between align-items-end">
+      <div class="d-flex align-items-end">
+        <h3>{{country.country_name}}</h3>
+      </div>
+    </div>
+    <hr>
+    <div>
+      {% if univ_dict %}
+          {% for key, val in univ_dict.items %}
+          <ul class="lgroup" >
+              <h5 class="lalpha">{{ key }}</h5>
+              <div class="lforeign_name ">
+                {% for univ in val %}
+                <a href="{% url "foreign:wiki" univ.pk %}">{{univ.away_name}}</a>
+                {% endfor %}
+              </div>
+          </ul>
+          <br>
+          {% endfor %}
+        {% else %}
+        <div class='text-center m-4'>
+            <h5 style="margin-bottom: 5px;">등록된 정보가 없습니다</h5>
+            <h6>첫 번째로 정보를 등록해주세요!</h6>
+        </div>
+    {% endif %}
     </div>
   </div>
-
-  <hr>
-
   <div>
-    {% if univ_dict %}
-        {% for key, val in univ_dict.items %}
-        <ul class="lgroup" >
-            <h5 class="lalpha">{{ key }}</h5>
-            <div class="lforeign_name ">
-              {% for univ in val %}
-              <a href="{% url "foreign:wiki" univ.pk %}">{{univ.away_name}}</a>
-              {% endfor %}
-            </div>
-        </ul>
-        <br>
-        {% endfor %}
-      {% else %}
-      <div class='text-center m-4'>
-          <h5 style="margin-bottom: 5px;">등록된 정보가 없습니다</h5>
-          <h6>첫 번째로 정보를 등록해주세요!</h6>
-      </div>
-  {% endif %}
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+      crossorigin="anonymous"></script>
+  <!-- Vertical170 -->
+  <ins class="adsbygoogle"
+      style="display:inline-block;width:170px;height:500px"
+      data-ad-client="ca-pub-2153488758273914"
+      data-ad-slot="2948538568"></ins>
+  <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
   </div>
 </div>
-
 {%endblock%}
