--- a/templates/domestic/univ_list.html
+++ b/templates/domestic/univ_list.html
@@ -28,15 +28,14 @@
     <div>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
         crossorigin="anonymous"></script>
-        <ins class="adsbygoogle"
-            style="display:block; text-align:center;"
-            data-ad-layout="in-article"
-            data-ad-format="fluid"
-            data-ad-client="ca-pub-2153488758273914"
-            data-ad-slot="4996117401"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+   <!-- Vertical -->
+   <ins class="adsbygoogle"
+        style="display:inline-block;width:200px;height:500px"
+        data-ad-client="ca-pub-2153488758273914"
+        data-ad-slot="8947820764"></ins>
+   <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+   </script>
     </div>
 </div>
 {% endblock %}
