--- a/templates/domestic/univ_list.html
+++ b/templates/domestic/univ_list.html
@@ -25,17 +25,17 @@
             </div>
         </div>
     </div>
-    <div>
+    <div style="margin-left: 50px; margin-top: 50px;">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
         crossorigin="anonymous"></script>
-   <!-- Vertical -->
-   <ins class="adsbygoogle"
-        style="display:inline-block;width:200px;height:500px"
-        data-ad-client="ca-pub-2153488758273914"
-        data-ad-slot="8947820764"></ins>
-   <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-   </script>
+    <!-- Vertical -->
+    <ins class="adsbygoogle"
+            style="display:inline-block;width:150px;height:500px"
+            data-ad-client="ca-pub-2153488758273914"
+            data-ad-slot="8947820764"></ins>
+    <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     </div>
 </div>
 {% endblock %}
