--- a/templates/login/signup.html
+++ b/templates/login/signup.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="d-flex justify-content-end">
-<div class="container login"  style="height: 900px; margin-right: 50px;">
+<div class="container login"  style="height: 900px;">
     <h3>회원가입</h3>
     <br />
     <hr />
@@ -34,7 +34,7 @@
         <input class="blue-button login-btn" type="submit" value="회원가입" style="margin-top: 30px;"/>
     </form>
 </div>
-<div>
+<div style=" margin-right: 50px; margin-top: 50px;">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
     crossorigin="anonymous"></script>
 <!-- Vertical -->
