--- a/templates/country/country_base.html
+++ b/templates/country/country_base.html
@@ -17,9 +17,21 @@
                 <h3 class=""><a href="{% url 'country:question_list' country.pk %}">QnA</a></h3>
             </div>
         </div>
-        <div class="contents">
+        <div class="contents d-flex flex-row justify-content-end">
             {% block contents %}
             {% endblock %}
+            <div style="margin-left: 50px; margin-top: 50px;">
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+                crossorigin="anonymous"></script>
+                <!-- Vertical -->
+                <ins class="adsbygoogle"
+                    style="display:inline-block;width:150px;height:500px"
+                    data-ad-client="ca-pub-2153488758273914"
+                    data-ad-slot="8947820764"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
         </div>
     </div>
     
