--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -2,7 +2,8 @@
 
 
 {% block content %}
-    <div class="d-flex flex-column align-items-center container login" style="height: 1000px;">
+<div class="d-flex justify-content-end">
+    <div class="d-flex flex-column align-items-center container login" style="height: 1000px; margin-right: 50px; ">
         <h3>로그인</h3>
         <br />
         <hr />
@@ -19,20 +20,20 @@
             <input class="login-btn blue-button" type="submit" value="로그인" />
             
         </form>
-        <div>
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
-            crossorigin="anonymous"></script>
+    </div>
+    <div style="margin-top: 50px;">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+        crossorigin="anonymous"></script>
         <!-- Vertical -->
         <ins class="adsbygoogle"
-            style="display:inline-block;width:200px;height:100px"
+            style="display:inline-block;width:150px; height:500px"
             data-ad-client="ca-pub-2153488758273914"
             data-ad-slot="8947820764"></ins>
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
-        </div>
     </div>
-    
+</div>
 
 {% endblock %}
 
