--- a/templates/login/mypage.html
+++ b/templates/login/mypage.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="container login" style="height: 900px;">
+<div class="d-flex justify-content-end">
+    <div class="container login" style="height: 900px; margin-right: 50px; ">
         <h3>마이페이지</h3>
         <br />
         <hr />
@@ -59,6 +60,19 @@
             </div>
         </section>
     </div>
+    <div style="margin-top: 50px;">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+        crossorigin="anonymous"></script>
+    <!-- Vertical -->
+    <ins class="adsbygoogle"
+            style="display:inline-block;width:150px;height:500px"
+            data-ad-client="ca-pub-2153488758273914"
+            data-ad-slot="8947820764"></ins>
+    <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    </div>
+</div>
 {% endblock %}
 
 {% block extra %}
