--- a/templates/login/mycomment.html
+++ b/templates/login/mycomment.html
@@ -6,7 +6,8 @@
 {% endblock %}
 
 {% block content %}
-    <section class="container login mypage mylist" style="margin-bottom: 50px;">
+<div class="d-flex justify-content-end">
+    <section class="container login mypage mylist" style="margin-bottom: 50px; margin-right: 50px; ">
         <h3>내가 답변을 남긴 질문 목록</h3>
         <br />
         <hr />
@@ -187,7 +188,19 @@
             </div>
         </div>
     </section>
-    
+    <div style="margin-top: 50px;">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+        crossorigin="anonymous"></script>
+        <!-- Vertical -->
+        <ins class="adsbygoogle"
+                style="display:inline-block;width:150px;height:500px"
+                data-ad-client="ca-pub-2153488758273914"
+                data-ad-slot="8947820764"></ins>
+        <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+</div>
 {% endblock %}
 
 {% block extra %}
