--- a/templates/login/reset_password.html
+++ b/templates/login/reset_password.html
@@ -7,20 +7,34 @@
 
 
 {% block content %}
-<div class="d-flex flex-column align-items-center container login" style="height: 800px;">
-    <h3>비밀번호 재설정</h3>
-    <br />
-    <hr />
-    <form method="POST">
-        {% csrf_token %}
-            <input class="login-input" name="username" type="text" placeholder="아이디" required/>
-            <br />
-            <input class="login-input" name="email" type="email" placeholder="이메일" required/><br />
-            <div class="reset-password">
-                <small class="reset-button">등록하신 이메일로 임시 비밀번호가 발송됩니다.</small>
-            </div>
-            <input class="login-btn blue-button" type="submit" value="비밀번호 찾기" />
-    </form>
+<div class="d-flex justify-content-end">
+    <div class="d-flex flex-column align-items-center container login" style="height: 800px; margin-right: 50px; ">
+        <h3>비밀번호 재설정</h3>
+        <br />
+        <hr />
+        <form method="POST">
+            {% csrf_token %}
+                <input class="login-input" name="username" type="text" placeholder="아이디" required/>
+                <br />
+                <input class="login-input" name="email" type="email" placeholder="이메일" required/><br />
+                <div class="reset-password">
+                    <small class="reset-button">등록하신 이메일로 임시 비밀번호가 발송됩니다.</small>
+                </div>
+                <input class="login-btn blue-button" type="submit" value="비밀번호 찾기" />
+        </form>
+    </div>
+    <div style="margin-top: 50px;">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+        crossorigin="anonymous"></script>
+        <!-- Vertical -->
+        <ins class="adsbygoogle"
+                style="display:inline-block;width:150px;height:500px"
+                data-ad-client="ca-pub-2153488758273914"
+                data-ad-slot="8947820764"></ins>
+        <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
 </div>
 {% endblock %}
 
