--- a/templates/login/success_email.html
+++ b/templates/login/success_email.html
@@ -1,11 +1,25 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container login" style="height: 800px;">
-    <h3>학교 인증</h3>
-    <br />
-    <hr />
-    <p class="sending-mail">이메일 인증이 완료되었습니다.</p>
+<div class="d-flex justify-content-end ">
+    <div class="container login" style="height: 800px; margin-right: 50px; ">
+        <h3>학교 인증</h3>
+        <br />
+        <hr />
+        <p class="sending-mail">이메일 인증이 완료되었습니다.</p>
+    </div>
+    <div style="margin-top: 50px;">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+        crossorigin="anonymous"></script>
+        <!-- Vertical -->
+        <ins class="adsbygoogle"
+            style="display:inline-block;width:150px;height:500px"
+            data-ad-client="ca-pub-2153488758273914"
+            data-ad-slot="8947820764"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
 </div>
 {% endblock %}
 
