TEST-147 Feat: foreign 친구찾기 사이드바

--- a/templates/foreign/foreign_base.html
+++ b/templates/foreign/foreign_base.html
@@ -17,6 +17,7 @@
                     <h4><a href="{% url 'foreign:wiki' univ.pk %}#foreign_7">장학금</a></h4>
                 <h3><a href="{% url 'foreign:question_list' univ.pk %}">QnA</a></h3>
                 <h3><a href="{% url 'foreign:review_list' univ.pk %}">파견교 후기 공유</a></h3>
+                <h3><a href="{% url 'foreign:friend_list' univ.pk %}">친구찾기</a></h3>
             </div>
         </div>
         
