TEST-144 조회수 적용
아직 디자인 측면에서 손을 대진 않음.

--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -14,6 +14,7 @@
             <div>
                 <span class="review-detail-title">{{review.title}}</span>
                 <span class="review-detail-date">{{review.away_year}} {{review.away_semester}}</span>
+                <span style="margin-left: 10px; font-size: 15px;">조회수 : {{ review.hits }}</span>
             </div>
             <div>
                 {% if IsReviewAuthor %}
